src/test/ui/error-codes/E0365.stderr
error[E0365]: `foo` is private, and cannot be re-exported
  --> $DIR/E0365.rs:15:9
   |
15 | pub use foo as foo2;
   |         ^^^^^^^^^^^ re-export of private `foo`
   |
   = note: consider declaring type or module `foo` with `pub`

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0365"
